syntax = "proto3";

package greet;
option go_package = "server-stream/greetpb";

// model
message Greeting {
  string first_name = 1;
  string last_name = 2;
}

// request
message GreetManyTimesRequest {
  Greeting greeting = 1;
}

// response
message GreetManyTimesResponse {
  string result = 1;
}

service GreetService{
  // server streaming
  rpc GreetManyTimes(GreetManyTimesRequest) returns (stream GreetManyTimesResponse) {}
}